--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 rocket = {version = "0.5.0-rc.2",features=["json"]}
 toml = "0.7.6"
-mysql = "24.0.0"
+# mysql = "24.0.0"
+r2d2_mysql = "24.0.0"
+dotenv = "0.15.0"
 
 [dependencies.rocket_dyn_templates]
 version = "=0.1.0-rc.3"
